# rasa-pizza-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.py  pyproject.toml  sender.py  trial.py
bot/: config.py  config.yml  credentials.yml  domain.yml
bot/actions/: actions.py
bot/data/: nlu.yml  rules.yml  stories.yml
bot/messenger/: twilio_.py
bot/msg/: twilio_.py
pizzabot/: config.py  config.yml  credentials.yml  domain.yml
pizzabot/actions/: actions.py  twilio_connector.py
pizzabot/data/: nlu.yml  stories.yml
pizzabot/messaging/: twilio_.py
